Stop panelizer being a ball bag with z-index 999999

--- a/theme/css/overrides.css
+++ b/theme/css/overrides.css
@@ -7,5 +7,6 @@
  * Paneliser
  */
 #panels-ipe-control-container {
+  z-index: 15 !important;
   margin-bottom: 37px;
 }
